# GameServer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
docker/: README.md
docker/auth_server/: Dockerfile  auth_server
docker/auth_server/certs/: README.MD
docker/broker/: Dockerfile
docker/broker/certs/: README.MD
docker/lib/: libssl.so.3
include/: CMakeLists.txt  kdf_deleter.h  main.hpp  mock_dtls_server.hpp  servers.hpp  ssl_deleter.h  ssl_messenger.hpp  user_session.hpp
include/auth_server/: main.hpp
include/broker/: login_data.hpp  main.hpp  servers.hpp  ssl_messenger.hpp  user_session.hpp
include/proto/: CMakeLists.txt  game_messages.proto
src/: CMakeLists.txt  main.cpp  mock_dtls_client.cpp  mock_dtls_server.cpp  ssl_messenger.cpp
src/auth_server/: CMakeLists.txt  main.cpp
src/broker/: CMakeLists.txt  main.cpp  ssl_messenger.cpp
src/certs/: cert.pem  key.pem
tests/: CMakeLists.txt
